test/statements/diten/badIndexVar.good
badIndexVar.chpl:1 error: invalid index expression
