test/statements/diten/badIndexVar.chpl
for (1, a) in (1..2, 3..4) {
  writeln(1, a);
}
